--- a/todo
+++ b/todo
@@ -4,8 +4,9 @@ Read config from file or url or Git. Some way to share config.
 Consider allowing multiple configs. Maybe each config needs a name and that can show up as a tag in the snippet modal.
 Create screenshots and/or a gif.
 Publish to web store.
-Automatically reload config if it changes while a page is open.
 Organize repo files (images dir, etc.).
 Add bug link to popup or settings.
 Add tests.
 Improve search. Should match multiple words, partial words, words plus tags, etc.
+Show windows symbol in popup.
+Maybe support multiple tags.
