--- a/todo
+++ b/todo
@@ -10,3 +10,8 @@ Add tests.
 Improve search. Should match multiple words, partial words, words plus tags, etc.
 Show windows symbol in popup.
 Maybe support multiple tags.
+Rename share link param to pig.
+Clean up global state in content script.
+Allow override of keyboard shortcuts.
+Handle really long names and tags.
+Fix tiny command icon in shortcuts.
