--- a/todo
+++ b/todo
@@ -14,3 +14,4 @@ Rename share link param to pig.
 Clean up global state in content script.
 Allow override of keyboard shortcuts.
 Handle really long names and tags.
+Translate
