--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
 Add light mode.
 Unify styles in extension popup and modal.
 Read config from file or url or Git. Some way to share config.
-Consider allowing multiple configs. Maybe each config needs a name and that can show up as a tag in the snippet modal.
+Consider allowing multiple configs.
 Create screenshots and/or a gif.
 Publish to web store.
 Organize repo files (images dir, etc.).
