--- a/todo
+++ b/todo
@@ -11,3 +11,4 @@ Show windows symbol in popup.
 Maybe support multiple tags.
 Clean up global state in content script.
 Allow override of keyboard shortcuts.
+Link to named queries. Problem is not all users have the same config. Maybe include full query in URL as backup.
