--- a/todo
+++ b/todo
@@ -12,9 +12,11 @@ Clean up global state in content script.
 Allow override of keyboard shortcuts.
 Link to named queries. Problem is not all users have the same config. Maybe include full query in URL as backup.
 Link to config from no options found message.
-Auto-update remote configs.
 Add buttons to site link to open in background tab, new window, etc.
 It should be possible to copy a link to a site by right-clicking
 It should be possible to disable groups.
 Once a group is used, maybe this should add a bonus to that group in the search rankings.
 Precreate search index.
+Add a refresh config button to the popup. Show when last refreshed. Show errors.
+Show config-specific errors from last fetch on each remote config.
+Add link to chrome extension settings from popup.
