--- a/todo
+++ b/todo
@@ -1,6 +1,4 @@
 Add light mode.
-Unify styles in extension popup and modal.
-Consider allowing multiple configs.
 Create screenshots and/or a gif.
 Publish to web store.
 Add bug link to popup or settings.
@@ -9,9 +7,9 @@ Show windows symbol in popup.
 Maybe support multiple tags.
 Clean up global state in content script.
 Allow override of keyboard shortcuts.
-Link to named queries. Problem is not all users have the same config. Maybe include full query in URL as backup.
-Add buttons to site link to open in background tab, new window, etc.
 It should be possible to disable groups.
 Once a group is used, maybe this should add a bonus to that group in the search rankings.
 Precreate search index.
 Add link to chrome extension settings from popup.
+Log errors somewhere
+Fix share link bug. The query doesn't always load.
