--- a/todo
+++ b/todo
@@ -1,5 +1,4 @@
 Add light mode.
-Publish to web store.
 Add tests.
 Maybe support multiple tags.
 Clean up global state in content script.
@@ -7,3 +6,4 @@ Allow override of keyboard shortcuts.
 It should be possible to disable groups.
 Precreate search index.
 Log errors somewhere
+Test cell copy with newlines and a lot of content.
