Update todo. Tested cell copy with lots of content.

--- a/todo
+++ b/todo
@@ -6,5 +6,6 @@ Allow override of keyboard shortcuts.
 It should be possible to disable groups.
 Precreate search index.
 Log errors somewhere
-Test cell copy with newlines and a lot of content.
 Add multiline viewer for large content. Parse json, yaml, etc.
+Test production version on Windows.
+Include commit in crx file.
