--- a/todo
+++ b/todo
@@ -9,3 +9,5 @@ Log errors somewhere
 Add multiline viewer for large content. Parse json, yaml, etc.
 Test production version on Windows.
 Update from modal.
+Formats: millis, seconds, dates (show in my timezone), number (show commas
+Add default site Url which opens cell content that are URLs.
